--- a/Test/testeex19/html/client-web-listagem.html
+++ b/Test/testeex19/html/client-web-listagem.html
@@ -5,4 +5,43 @@
         <meta nome="viewport" content="width=device-width, initial-scale=1.0"> <!--Configuração para dispocitivos móveis-->
         <title>Lista de Produtos</title>
     </head>
+    <body>
+        <h2>Lista de Produtos - HTML/JavaScript</h2> <!--Titulo principal da página-->
+        <table id="produtosTable" border="1">
+            <thead>
+                <tr>
+                    <th>ID</th> <!--Cabeçalho da coluna ID-->
+                    <th>Nome</th> <!--Cabeçalho da coluna Nome-->
+                    <th>Preço</th> <!--Cabeçalho da coluna preço-->
+                </tr>
+            </thead>
+            <tbody>
+                <!--Linhas da tabela serão inseridas aqui-->
+            </tbody>
+        </table>
+        <!--Mensagem de erro-->
+        <div id="erroMensagem" style="color: red; display: none;"> <!--Div para exibir mensagem de erro-->
+            Erro ao buscar produtos. Porfavor, tente novamente mais tarde.
+        </div>
+        <!--Total de produtos-->
+        <div id="totalProdutos">Total de Produtos: 0</div> <!--Div para exibir o total de produtos-->
+
+        <!--Função JavaScript (similar aos métodos Java)-->
+        <script>
+            //Função para listar os produtos
+            function listarProdutos(){
+                //Faz uma requisitção GET para o endpoint de produtos
+                fetch('http://localhost:8080/produtos').then(Response => {
+                    //O metodo then é usado para encadear ações
+                    if(!Response.ok){
+                        //Lança um erro se a resposta não for ok
+                        //Quando um erro é lançado, o fluxo de execução do código é interrompido e ele salta pra o bloco catch
+                    }
+                    //Converte a resposta para JSON
+                    return Response.json(); //Converte a resposta para JSON
+                }) //URL do endpoint
+                .then()
+            }
+        </script>
+    </body>
 </html>
